# optics-diagram

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: microsphere_setup.py  nanosphere_setup.py
opticsdiagram/: __init__.py  canvas.py  registry.py
scripts/: make_component_grid.py
