[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opticsdiagram"
version = "0.1.0"
description = "Publication-quality optics layout diagrams with matplotlib."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Clarke Hardy", email = "clarke.hardy@yale.edu" }]
keywords = ["optics", "matplotlib", "diagram", "schematic", "physics", "figures"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Framework :: Matplotlib",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/clarkehardy/optics-diagram"
Repository = "https://github.com/clarkehardy/optics-diagram"

[tool.hatch.build.targets.wheel]
packages = ["opticsdiagram"]
